--- a/index.html
+++ b/index.html
@@ -1,7 +1,248 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
-    <body>
-        <p>Nothing here yet...</p>
-    </body>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<script src="index.js" defer></script>
+	<head>
+		<title>Ethan Vrhel</title>
+	</head>
+	<nav>
+		<ul>
+			<li><a href="#top">Home</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
+	<body>
+
+		<div id="top">
+			<h1 id="#top">Hello!</h1>
+			<div class="content">
+				<p>I'm Ethan, a senior at the University of Washington in Seattle, and I am majoring in Computer Science.</p>
+				<p>I'm especially interested in computer graphics, programming languages, and low-level programming constructs.</p>
+				<p>I plan to graduate in 2024.</p>
+			</div>
+		</div>
+
+		<div id="projects">
+			<h1>Projects</h1>
+
+			<h2 id="lythium">Lythium</h2>
+			<div class="content">
+				<p>
+					Lythium is the successor to <a href="lithium_roadmap.html" class="body-link">Lithium</a>. Unlike Lithium, Lythium is a 2D game engine, but features many<br>
+					improvements in architecture and usability.
+				</p>
+
+				<p>
+					Lythium is written in C++ and Lua and uses OpenGL for hardware-accelerated rendering. The engine<br>
+					comes packaged with a graphical editor and supports scripting in C++ or Lua. It is cross platform,<br>
+					supporting Windows, Mac and Linux.
+				</p>
+
+				<a href="lythium.html" class="body-list">Read More</a>
+			</div>
+			
+			<h2 id="lithium">Lithium</h2>
+			<div class="content">
+				<p>
+					Lithium is a 3D game engine written in C++ and uses OpenGL for hardware-accelerated rendering.
+				</p>
+
+				<p>
+					Uses a deferred rendering pipeline by default and a Physically Based Rendering lighting model<br>
+					alongside several modern post-processing effects.
+				</p>
+
+				<p>
+					Supports authoring C++ scripts to control game behavior, a complex resource system which manages<br>
+					resources automatically and only loads what is necessary at a single moment.
+				</p>
+
+				
+
+				<a href="lithium_roadmap.html" class="body-list">Read More</a>
+			</div>
+
+			<h2 id="matrixutil">MatrixUtil</h2>
+
+			<div class="content">
+				<p>
+					MatrixUtil is a library written in C++ to handle vector, matrix, and quaternion calculations.<br>
+					The library uses Intel SIMD Intrinsics for fast computations. Support for ARM Neon is currently<br>
+					in development.
+				</p>
+
+				<em><p>Example library usage to rotate a point</p></em>
+
+				<!-- &zwnj; is an invisible character, fixes text being next to each other on chromium -->
+				<!-- issue arises anytime there is whitespace after a span -->
+				<em><code>main.cpp</code></em><br><br>
+				<pre class="code">
+					<span class="tr first-row"><span class="th"></span><span class="define">&#35;include</span> <span class="string">&lt;mutil/mutil.h&gt;</span><code></code></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span><span class="keyword">using namespace</span> mutil;</span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span><span class="keyword">int</span>&zwnj; <span class="function">main</span>(<span class="keyword">int</span> argc, <span class="keyword">char</span> *argv[]) {</span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="type">Vector4</span> p(<span class="number">1.0f</span>, <span class="number">3.0f</span>, <span class="number">5.0f</span>, <span class="number">1.0f</span>);</span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="type">Vector4</span> t;</span></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="comment">// create matrix that rotates 45 degrees around x axis</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="type">Matrix4</span> M(<span class="number">1.0f</span>);</span>
+					<span class="tr"><span class="th"></span>   M = <span class="function">rotate</span>(M, <span class="function">radians</span>(<span class="number">45.0f</span>), <span class="type">Vector3</span>(<span class="number">1.0f</span>, <span class="number">0.0f</span>, <span class="number">0.0f</span>));</span></span>
+					<span class="tr"><span class="th"></span>   t = M * p; <span class="comment">// applies M on p</span></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="comment">// same thing, but using quaternions</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="type">Quaternion</span> q = <span class="function">rotateaxis</span>(<span class="type">Vector3</span>(<span class="number">1.0f</span>, <span class="number">0.0f</span>, <span class="number">0.0f</span>), <span class="number">45.0f</span>);</span>
+					<span class="tr"><span class="th"></span>   t = <span class="function">rotatevector</span>(q, p);</span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="comment">// another way to use quaternions</span></span>
+					<span class="tr"><span class="th"></span>   t = <span class="function">torotation</span>(q) * p;</span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="comment">// convert between quaternions and euler angles</span></span>
+					<span class="tr"><span class="th"></span>   q = <span class="function">fromeuler</span>(<span class="number">45.0f</span>, <span class="number">0.0f</span>, <span class="number">0.0f</span>);</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="type">Vector3</span> euler = <span class="function">toeuler</span>(q);</span></span>
+					<span class="tr"><span class="th"></span>}</span>
+					<span class="tr"><span class="th"></span></span>
+				</pre>
+
+				<a href="https://github.com/evrhel/MatrixUtil" target="null" class="body-list">GitHub Repository</a>
+			</div>
+
+			<h2 id="mtgl">mtgl</h2>
+
+			<div class="content">
+				<p>
+					mtgl (short for <b>M</b>ulti<b>t</b>hreaded Open<b>GL</b>) is an in-development Window and OpenGL abstraction library.<br>
+					There is a heavy focus on making multithreaded OpenGL rendering as easy as possible. The library is<br>
+					written in C and Objective-C and can be used on both Windows and macOS. The library provides a simple<br>
+					interface for creating windows and OpenGL contexts as well as providing an input system, allowing the<br>
+					capture of window events alongside keyboard, mouse, and joystick/controller input.<br>
+				</p>
+
+				<p>
+					Due to the realtime responsiveness that is expected of games, slowdowns in the rendering thread<br>
+					can be detrimental to the user experience. Multithreading can be used to mitigate this issue by<br>
+					offloading slow work to another thread.
+				</p>
+
+				<p>
+					However, the issue arrives when some work you did on another thread needs to be used on the rendering<br>
+					thread. OpenGL is not thread safe, so synchronization is required. The place where you synchronize<br>
+					matters so that the state of OpenGL states consistent. This is where mtgl comes in. The most powerful<br>
+					feature of mtgl is the ability to synchronize on an OpenGL context itself. This allows the context to<br>
+					always be in a consistent state, and allows the user to perform OpenGL calls on any thread.
+				</p>
+
+				<p>
+					One of the most obvious uses of this would be when needing to load information from the disk. This<br>
+					operation is very slow and reading it on the rendering thread would cause a noticeable hitch. Instead,<br>
+					we offload the disk operation to another thread. Once the data is loaded, we can then synchronize on<br>
+					the OpenGL context and upload the data to the GPU. This allows the rendering thread to continue<br>
+					running while the data is being loaded, and the user will not notice any hitches.<br>
+				</p>
+
+				<a href="https://github.com/evrhel/mtgl" target="null" class="body-list">GitHub Repository</a>
+			</div>
+
+			<h2 id="lscript">lscript</h2>
+
+			<div class="content">
+				<p>
+				 	lscript is an in-development statically typed scripting language. The language supports both<br>
+				 	procedural and object-oriented programming. The source code compiles to a bytecode which is read by the<br>
+				 	virtual machine which features many features similar to the Java Virtual Machine. The LScript Virtual<br>
+				 	Machine, compiler, and decompiler are all written entirely in C and x86-64 Assembly.
+			 	</p>
+
+			 	<p>
+					The virtual machine provides features such as a set of library functions for developers to use, as well<br>
+					as a native interface so developers can write native C or C++ functions and link to an LScript function. 
+				</p>
+
+				<p>lscript 2 is in development at the moment, which improves usability.</p>
+
+				<em><p>Example lscript class that writes to a file</p></em>
+
+				<em><code>Main.lasm</code></em><br><br>
+				<pre class="code">
+					<span class="tr first-row"><span class="th"></span><span class="keyword">using</span>&zwnj; <span class="type">lscript.io</span><code></code></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;<span class="comment"># Implicitly extends lscript.lang.Object</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;<span class="keyword">class</span>&zwnj; <span class="type">Main</span></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="comment"># Program entry point</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;   <span class="keyword">function static void</span>&zwnj; <span class="function">main</span>(<span class="keyword">objectarray</span> <span class="type">String</span> args)</span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="comment"># Create a lscript.io.FileOutputStream targeting test.txt</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="keyword">object</span>&zwnj; <span class="type">FileOutputStream</span> fout</span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="keyword">seto</span>&zwnj; fout <span class="keyword">new</span>&zwnj; <span class="type">FileOutputStream</span>(<em>L</em><span class="type">String</span>;) <span class="string">"test.txt"</span></span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="comment"># Write "Hello World!" to the file and close</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="keyword">dynamic_call</span>&zwnj; fout.<span class="function">print</span>(<em>L</em><span class="type">String</span>;) <span class="string">"Hello World!"</span></span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="keyword">dynamic_call</span>&zwnj; fout.<span class="function">close</span>()</span>
+					<span class="tr"><span class="th"></span></span>
+					<span class="tr"><span class="th"></span>&zwnj;      <span class="keyword">ret</span></span>
+					<span class="tr"><span class="th"></span></span>
+				</pre>
+				<em><p style="padding-top: 10px; padding-bottom: 5px;">To compile and run:</p></em>
+				<pre class="inline-code">lsasm Main.lasm</pre>
+				<pre class="inline-code">lscript Main.lscript</pre>
+
+				<a href="https://github.com/evrhel/lscript" target="null" class="body-list">GitHub Repository</a>
+			</div>
+
+			<h2 id="hexview">hexview</h2>
+
+			<div class="content">
+				<p>
+					hexview is a cross-platform, command-line binary file viewer. It supports seeking through files<br>
+					and interpreting groups of bytes as many common data types, such as larger width integers, both<br>
+					signed and unsigned, floating point numbers, and strings. Utilities are avaliable within the<br>
+					viewer to make navigating the file easier.
+				</p>
+
+
+				<p><em>hexview running in Windows command prompt</em></p>
+				<img style="margin-left: 10px; border: 5px solid #252525; border-style: inset;" src="imgs/hexview.png" alt="hexview in DOS command prompt">
+
+				<a href="https://github.com/evrhel/hexview" target="null" class="body-list">GitHub Repository</a>
+			</div>
+
+			<h2>Minor Projects</h2>
+
+			<p>Some other minor or incomplete projects I may or may not return to in the future.</p>
+
+			<div class="content">
+				<ul style="margin-left: 35px;">
+					<li>
+						<a class="body-link" href="https://github.com/evrhel/Java-BSP" target="null">Java-BSP</a> - A Java implementation of the Binary Space Partitioning algorithm.
+					</li>
+					<li>
+						<a class="body-link" href="https://github.com/evrhel/HttpServer" target="null">HttpServer</a> - A simple Windows HTTP server written in C++.
+					</li>
+				</ul>
+			</div>
+
+		<h1 id="contact">Contact</h1>
+
+		<div class="content">
+			<p>
+				GitHub: <a class="body-link" href="https://github.com/evrhel" target="null">evrhel</a>
+				<br>
+				LinkedIn: <a class="body-link" href="https://www.linkedin.com/in/ethan-vrhel/" target="null">ethan-vrhel</a>
+				<br>
+				Resume: <a class="body-link" href="misc/Resume_11_29_23.pdf" target="null">Resume (Download)</a>
+				<br>
+				Contact: <b>evrhel(at)cs.washington.edu</b>
+			</p>
+		</div>
+
+
+		<div>
+			<em><p style="text-align: center;">&copy; 2024 Ethan Vrhel</p></em>
+			<pre><p style="text-align: center;"><a class="body-link" href="https://github.com/evrhel/evrhel.github.io" target="null">view on github</a></p></pre>
+		</div>
+	</body>
 </html>
