Spelling error fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1 id="#top">Hello!</h1>
 			<div class="content">
 				<p>
-					I'm Ethan, a doctaral student at Oregon State University. I'm interested mainly in computer<br>
+					I'm Ethan, a doctoral candidate at Oregon State University. I'm interested mainly in computer<br>
 					graphics, but I enjoy working on a variety of projects as well. I graduated from the University<br>
 					of Washington in Seattle with a BS in Computer Science in 2024.
 				</p>
