--- a/index.html
+++ b/index.html
@@ -229,6 +229,10 @@
 				<br>
 				Contact: <b>vrhele(at)oregonstate.edu</b>
 			</p>
+
+			<p>
+				Want to send me something privately? Use my <a class="body-link" href="public.asc" target="null">PGP Key</a>.
+			</p>
 		</div>
 
 
